i did in fact cook rq

--- a/_posts/2024-10-26-test.md
+++ b/_posts/2024-10-26-test.md
@@ -147,7 +147,7 @@ permalink: /stocks/test
             outline: none;
             font-size: 16px;
         }
-        .add-chart-button {
+        .add-chart-button, .remove-chart-button {
             position: absolute;
             top: 10px;
             right: 10px;
@@ -163,7 +163,11 @@ permalink: /stocks/test
             display: flex;
             align-items: center;
             justify-content: center;
-            }
+        }
+        .remove-chart-button {
+            right: 40px; /* Adjust position for minus button */
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -206,12 +210,15 @@ permalink: /stocks/test
             </div>
 
             <div class="chart-container" id="chartContainer">
-                <button class="add-chart-button" onclick="addNewChart()">+</button>
+                <button class="add-chart-button" onclick="addNewChart()">
+                +</button>
+                 <button class="remove-chart-button" onclick="removeNewChart()">-</button>
                 <div class="chart" id="chart1">[Graph Placeholder]</div>
             </div>
-            </div>
+        </div>
 
-            <div class="sidebar">
+        <!-- Sidebar -->
+        <div class="sidebar">
             <!-- "Your Stocks" section with table -->
             <div class="your-stocks">
                 <h3>Your Stocks</h3>
@@ -243,7 +250,6 @@ permalink: /stocks/test
                 </table>
             </div>
 
-            <!-- Stock Prices table moved to the bottom -->
             <div class="stock-table">
                 <h3>Stock Prices</h3>
                 <table>
@@ -273,37 +279,50 @@ permalink: /stocks/test
                     </tr>
                 </table>
             </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Sidebar with "Your Stocks" and Stock Prices -->
-        
         </div>
     </div>
 
 </body>
 
-
 <script>
-        function addNewChart() {
-            const chartContainer = document.getElementById('chartContainer');
-            const chart1 = document.getElementById('chart1');
+    function addNewChart() {
+        const chartContainer = document.getElementById('chartContainer');
+        const chart1 = document.getElementById('chart1');
 
-            // Set the width of the original chart to 50%
-            chart1.style.flex = '0 0 50%';
+        // Adjust the width of the original chart to 50%
+        chart1.style.flex = '0 0 50%';
 
-            // Create a new chart placeholder
-            const newChart = document.createElement('div');
-            newChart.classList.add('chart');
-            newChart.innerText = '[New Graph Placeholder]';
+        // Create a new chart element
+        const newChart = document.createElement('div');
+        newChart.className = 'chart';
+        newChart.id = 'newChart';
+        newChart.innerText = '[New Graph Placeholder]';
 
-            // Add the new chart placeholder to the container
-            chartContainer.appendChild(newChart);
+        // Add the new chart to the chart container
+        chartContainer.appendChild(newChart);
 
-            // Remove the "+" button after adding the new chart
-            document.querySelector('.add-chart-button').style.display = 'none';
+        // Update the add button to show remove button
+        document.querySelector('.add-chart-button').style.display = 'none';
+        const removeButton = document.querySelector('.remove-chart-button');
+        removeButton.style.display = 'block';
+    }
+
+    function removeNewChart() {
+        const chartContainer = document.getElementById('chartContainer');
+        const newChart = document.getElementById('newChart');
+        const chart1 = document.getElementById('chart1');
+
+        if (newChart) {
+            // Remove the new chart element
+            chartContainer.removeChild(newChart);
+
+            // Restore the original chart's width
+            chart1.style.flex = '1';
+
+            // Show the add button and hide the remove button
+            document.querySelector('.add-chart-button').style.display = 'block';
+            document.querySelector('.remove-chart-button').style.display = 'none';
         }
-    </script>
-
+    }
+</script>
 </html>
