IT WORKS HOLY CRAP IT WORKS THE GRAPH

--- a/_posts/2024-10-26-test2.md
+++ b/_posts/2024-10-26-test2.md
@@ -1,6 +1,6 @@
 ---
 layout: none
-permalink: /stocks/test
+permalink: /stocks/test2
 title: Stocks Home
 ---
 <html lang="en">
@@ -8,7 +8,6 @@ title: Stocks Home
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock Market Dashboard</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -116,36 +115,16 @@ title: Stocks Home
             font-size: 36px;
             font-weight: bold;
         }
-        .chart-container {
-            position: relative;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            margin: 20px 0;
-            display: flex;
-            gap: 20px;
-        }
-        .chart {
-            height: 300px;
-            background-color: #f9f9f9;
-            border-radius: 8px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 24px;
-            color: #999;
-            flex: 1;
-        }
         .search-container {
             margin-bottom: 20px; /* Add margin to space it out */
             display: flex;
+            align-items: center; /* Align items vertically */
         }
         .search-container input[type="text"] {
             width: 100%; /* Full width of the graph */
             padding: 12px;
             border: none;
-            border-radius: 4px;
+            border-radius: 4px 0 0 4px; /* Rounded corners on the left */
             outline: none;
             font-size: 16px;
         }
@@ -162,28 +141,21 @@ title: Stocks Home
         .search-button:hover {
             background-color: #e07b00; /* Darker orange on hover */
         }
-        .add-chart-button, .remove-chart-button {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            background-color: #ff8c00;
-            color: #fff;
-            border: none;
-            border-radius: 50%;
-            width: 30px;
-            height: 30px;
-            font-size: 20px;
-            font-weight: bold;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+        .chart-container {
+            position: relative;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            margin: 20px 0;
         }
-        .remove-chart-button {
-            right: 40px; /* Adjust position for minus button */
-            display: none;
+        .chart {
+            height: 300px; /* Set height for the chart */
+            position: relative;
+            margin-top: 20px;
         }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -217,17 +189,12 @@ title: Stocks Home
                 </div>
             </div>
             <div class="search-container">
-               <input type="text" id = "searchBar" placeholder="Search...">
-               <button class="search-button" onclick="getStockData()">Search</button> <!-- Search button added -->
+                <input type="text" id="tickerInput" placeholder="Search for Ticker...">
+                <button class="search-button" onclick="fetchStockData()">Search</button> <!-- Search button added -->
             </div>
-            <div class="chart-container" id="chartContainer">
-                <button class="add-chart-button" onclick="addNewChart()">+</button>
-                <button class="remove-chart-button" onclick="removeNewChart()">-</button>
-                <div class="chart" id="chart1">
-                    <canvas id="stockChart" width="400" height="300">[Graph Placeholder]</canvas>
-                </div>
+            <div class="chart-container">
+                <canvas id="stockChart" class="chart"></canvas>
             </div>
-<div id="output" style="color: red; padding-top: 10px;"></div>
         </div>
         <!-- Sidebar -->
         <div class="sidebar">
@@ -269,122 +236,92 @@ title: Stocks Home
                         <th>Price</th>
                     </tr>
                     <tr>
-                        <td>Spotify</td>
-                        <td>$297,408</td>
-                    </tr>
-                    <tr>
                         <td>Apple</td>
-                        <td>$142,845</td>
+                        <td>$144.00</td>
                     </tr>
                     <tr>
                         <td>Google</td>
-                        <td>$273,402</td>
-                    </tr>
-                    <tr>
-                        <td>Facebook</td>
-                        <td>$97,213</td>
+                        <td>$2790.00</td>
                     </tr>
                     <tr>
                         <td>Microsoft</td>
-                        <td>$342,981</td>
+                        <td>$305.00</td>
+                    </tr>
+                    <tr>
+                        <td>Facebook</td>
+                        <td>$323.00</td>
+                    </tr>
+                    <tr>
+                        <td>Twitter</td>
+                        <td>$54.00</td>
                     </tr>
                 </table>
             </div>
         </div>
     </div>
+    <script>
+        async function fetchStockData() {
+            const ticker = document.getElementById('tickerInput').value;
 
-</body>
-
-<script>
-    function addNewChart() {
-        const chartContainer = document.getElementById('chartContainer');
-        const chart1 = document.getElementById('chart1');
-
-        // Adjust the width of the original chart to 50%
-        chart1.style.flex = '0 0 50%';
-
-        // Create a new chart element
-        const newChart = document.createElement('div');
-        newChart.className = 'chart';
-        newChart.id = 'newChart';
-        newChart.innerText = '[New Graph Placeholder]';
-
-        // Add the new chart to the chart container
-        chartContainer.appendChild(newChart);
-
-        // Update the add button to show remove button
-        document.querySelector('.add-chart-button').style.display = 'none';
-        const removeButton = document.querySelector('.remove-chart-button');
-        removeButton.style.display = 'block';
-    }
-
-    function removeNewChart() {
-        const chartContainer = document.getElementById('chartContainer');
-        const newChart = document.getElementById('newChart');
-        const chart1 = document.getElementById('chart1');
-
-        if (newChart) {
-            // Remove the new chart element
-            chartContainer.removeChild(newChart);
-
-            // Restore the original chart's width
-            chart1.style.flex = '1';
-
-            // Show the add button and hide the remove button
-            document.querySelector('.add-chart-button').style.display = 'block';
-            document.querySelector('.remove-chart-button').style.display = 'none';
-        }
-    }
-    async function getStockData() {
-
-        const stockSymbol = document.getElementById("searchBar").value;
-        //console.log("Ticker Symbol:", stockSymbol);
-
-        try {
-            const response = await fetch(`http://localhost:8085/api/stocks/${stockSymbol}`);
-            const data = await response.json();
-            console.log(data);
-
-            // Extract timestamps and prices
-            const timestamps = data?.chart?.result?.[0]?.timestamp;
-            const prices = data?.chart?.result?.[0]?.indicators?.quote?.[0]?.close;
-
-            // Check if data exists
-            if (timestamps && prices) {
-                // Convert timestamps to readable dates
-                const labels = timestamps.map(ts => new Date(ts * 1000).toLocaleString());
-               displayChart(labels, prices, stockSymbol);
-            } else {
-                console.error(`Data not found for ${stockSymbol}. Response structure:`, data);
-                document.getElementById("output").textContent = `Data not found for ${stockSymbol}.`;
+            if (!ticker) {
+                alert('Please enter a ticker symbol');
+                return;
             }
-        } catch (error) {
-            console.error('Error fetching stock data:', error);
-            document.getElementById("output").textContent = "Error fetching stock data. Please try again later.";
-        }
-      }
 
-      function displayChart(labels, data, stockSymbol) {
-        const ctx = document.getElementById('stockChart').getContext('2d');
-        new Chart(ctx, {
-            type: 'line',
-            data: {
-                labels: labels,
-                datasets: [{
-                    label: `Stock Price for ${stockSymbol}`,
-                    data: data,
-                    borderColor: 'rgba(75, 192, 192, 1)',
-                    fill: false,
-                    tension: 0.1
-                }]
-            },
-            options: {
-                scales: {
-                    x: { title: { display: true, text: 'Timestamp' } },
-                    y: { title: { display: true, text: 'Price (USD)' } }
+            try {
+                const response = await fetch(`YOUR_BACKEND_API_ENDPOINT/${ticker}`); // Replace with your actual API endpoint
+                const data = await response.json();
+
+                // Here, you can parse the data and update the chart
+                updateChart(data);
+            } catch (error) {
+                console.error('Error fetching stock data:', error);
+                alert('Failed to fetch stock data. Please try again later.');
+            }
+        }
+
+        function updateChart(data) {
+            const ctx = document.getElementById('stockChart').getContext('2d');
+
+            // Clear existing chart if it exists
+            if (window.stockChart) {
+                window.stockChart.destroy();
+            }
+
+            // Create a new chart
+            window.stockChart = new Chart(ctx, {
+                type: 'line',
+                data: {
+                    labels: data.dates, // Assume your data has a "dates" array
+                    datasets: [{
+                        label: data.symbol, // Stock symbol
+                        data: data.prices, // Assume your data has a "prices" array
+                        borderColor: 'rgba(75, 192, 192, 1)',
+                        backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                        borderWidth: 2,
+                        fill: true
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    scales: {
+                        x: {
+                            title: {
+                                display: true,
+                                text: 'Date'
+                            }
+                        },
+                        y: {
+                            title: {
+                                display: true,
+                                text: 'Price ($)'
+                            },
+                            beginAtZero: true
+                        }
+                    }
                 }
-            }
-        });
-      }
-</script>
+            });
+        }
+    </script>
+</body>
 </html>
