--- a/_posts/2024-10-26-test.md
+++ b/_posts/2024-10-26-test.md
@@ -92,13 +92,14 @@ title: Stocks Home
             margin: 20px 0;
         }
         .card {
-            padding: 20px;
+            padding: 0px;
             margin: 10px;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             flex: 1;
             text-align: center;
             color: #fff; /* Text color set to white */
+            padding-bottom: -40px;
         }
         .card-orange {
             background-color: #FF8C00; /* Orange color */
@@ -119,7 +120,7 @@ title: Stocks Home
         .chart-container {
             position: relative;
             background-color: #fff;
-            padding: 20px;
+            padding: 50px;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             margin: 20px 0;
@@ -127,8 +128,9 @@ title: Stocks Home
             gap: 20px;
         }
         .chart {
-            height: 300px;
-            background-color: #f9f9f9;
+            height: 100%; /* Set height to 100% to fill the container */
+            width: 100%; /* Set height to 100% to fill the container */
+            background-color: #fff; /* Set the chart background to white */
             border-radius: 8px;
             display: flex;
             align-items: center;
@@ -224,7 +226,7 @@ title: Stocks Home
                 <button class="add-chart-button" onclick="addNewChart()">+</button>
                 <button class="remove-chart-button" onclick="removeNewChart()">-</button>
                 <div class="chart" id="chart1">
-                    <canvas id="stockChart" width="400" height="300">[Graph Placeholder]</canvas>
+                    <canvas id="stockChart" width="450" height="400">[Graph Placeholder]</canvas>
                 </div>
             </div>
 <div id="output" style="color: red; padding-top: 10px;"></div>
@@ -364,27 +366,67 @@ title: Stocks Home
         }
       }
 
-      function displayChart(labels, data, stockSymbol) {
-        const ctx = document.getElementById('stockChart').getContext('2d');
-        new Chart(ctx, {
-            type: 'line',
-            data: {
-                labels: labels,
-                datasets: [{
-                    label: `Stock Price for ${stockSymbol}`,
-                    data: data,
-                    borderColor: 'rgba(75, 192, 192, 1)',
-                    fill: false,
-                    tension: 0.1
-                }]
+function displayChart(labels, data, stockSymbol) {
+    const ctx = document.getElementById('stockChart').getContext('2d');
+
+    // Create a gradient for the area under the line
+    const gradient = ctx.createLinearGradient(0, 0, 0, 400); // Adjust the height as necessary
+    gradient.addColorStop(0, 'rgba(106, 13, 173, 0.6)'); // Start with purple (rgba)
+    gradient.addColorStop(1, 'rgba(255, 255, 255, 0.0)'); // Fade to transparent
+
+    new Chart(ctx, {
+        type: 'line',
+        data: {
+            labels: labels,
+            datasets: [{
+                label: `Stock Price for ${stockSymbol}`,
+                data: data,
+                borderColor: '#001f3f', // Dark blue color for the line
+                backgroundColor: gradient, // Gradient background
+                fill: true, // Enable filling under the line
+                pointRadius: 0, // Remove dots
+                tension: 0.1 // Smooth the line
+            }]
+        },
+        options: {
+            responsive: true,
+            maintainAspectRatio: false, // Allow chart to fill the container
+            plugins: {
+                legend: {
+                    display: false // Hide the legend
+                },
+                tooltip: {
+                    enabled: true, // Enable tooltips
+                    mode: 'index', // Tooltip for closest point
+                    intersect: false // Show tooltip when hovering close to the line
+                }
             },
-            options: {
-                scales: {
-                    x: { title: { display: true, text: 'Timestamp' } },
-                    y: { title: { display: true, text: 'Price (USD)' } }
+            scales: {
+                x: {
+                    title: { display: true, text: 'Timestamp' },
+                    ticks: {
+                        callback: function(value) {
+                            // Format the timestamp to display only hours
+                            return new Date(value).toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
+                        }
+                    },
+                    grid: {
+                        display: false // Remove grid lines on x-axis
+                    }
+                },
+                y: {
+                    title: { display: true, text: 'Price (USD)' },
+                    grid: {
+                        display: false // Remove grid lines on y-axis
+                    }
                 }
             }
-        });
-      }
+        }
+    });
+}
+
+
+    
+
 </script>
 </html>
