test2 has good styling

--- a/_posts/2024-10-26-test2.md
+++ b/_posts/2024-10-26-test2.md
@@ -8,6 +8,7 @@ title: Stocks Home
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock Market Dashboard</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -91,13 +92,14 @@ title: Stocks Home
             margin: 20px 0;
         }
         .card {
-            padding: 20px;
+            padding: 0px;
             margin: 10px;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             flex: 1;
             text-align: center;
             color: #fff; /* Text color set to white */
+            padding-bottom: -40px;
         }
         .card-orange {
             background-color: #FF8C00; /* Orange color */
@@ -115,16 +117,37 @@ title: Stocks Home
             font-size: 36px;
             font-weight: bold;
         }
+        .chart-container {
+            position: relative;
+            background-color: #fff;
+            padding: 50px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            margin: 20px 0;
+            display: flex;
+            gap: 20px;
+        }
+        .chart {
+            height: 100%; /* Set height to 100% to fill the container */
+            width: 100%; /* Set height to 100% to fill the container */
+            background-color: #fff; /* Set the chart background to white */
+            border-radius: 8px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 24px;
+            color: #999;
+            flex: 1;
+        }
         .search-container {
             margin-bottom: 20px; /* Add margin to space it out */
             display: flex;
-            align-items: center; /* Align items vertically */
         }
         .search-container input[type="text"] {
             width: 100%; /* Full width of the graph */
             padding: 12px;
             border: none;
-            border-radius: 4px 0 0 4px; /* Rounded corners on the left */
+            border-radius: 4px;
             outline: none;
             font-size: 16px;
         }
@@ -141,21 +164,7 @@ title: Stocks Home
         .search-button:hover {
             background-color: #e07b00; /* Darker orange on hover */
         }
-        .chart-container {
-            position: relative;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            margin: 20px 0;
-        }
-        .chart {
-            height: 300px; /* Set height for the chart */
-            position: relative;
-            margin-top: 20px;
-        }
     </style>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -189,12 +198,15 @@ title: Stocks Home
                 </div>
             </div>
             <div class="search-container">
-                <input type="text" id="tickerInput" placeholder="Search for Ticker...">
-                <button class="search-button" onclick="fetchStockData()">Search</button> <!-- Search button added -->
+               <input type="text" id = "searchBar" placeholder="Search...">
+               <button class="search-button" onclick="getStockData()">Search</button> <!-- Search button added -->
             </div>
-            <div class="chart-container">
-                <canvas id="stockChart" class="chart"></canvas>
+            <div class="chart-container" id="chartContainer">
+                <div class="chart" id="chart1">
+                    <canvas id="stockChart" width="475" height="375">[Graph Placeholder]</canvas>
+                </div>
             </div>
+<div id="output" style="color: red; padding-top: 10px;"></div>
         </div>
         <!-- Sidebar -->
         <div class="sidebar">
@@ -236,92 +248,121 @@ title: Stocks Home
                         <th>Price</th>
                     </tr>
                     <tr>
+                        <td>Spotify</td>
+                        <td>$297,408</td>
+                    </tr>
+                    <tr>
                         <td>Apple</td>
-                        <td>$144.00</td>
+                        <td>$142,845</td>
                     </tr>
                     <tr>
                         <td>Google</td>
-                        <td>$2790.00</td>
-                    </tr>
-                    <tr>
-                        <td>Microsoft</td>
-                        <td>$305.00</td>
+                        <td>$273,402</td>
                     </tr>
                     <tr>
                         <td>Facebook</td>
-                        <td>$323.00</td>
+                        <td>$97,213</td>
                     </tr>
                     <tr>
-                        <td>Twitter</td>
-                        <td>$54.00</td>
+                        <td>Microsoft</td>
+                        <td>$342,981</td>
                     </tr>
                 </table>
             </div>
         </div>
     </div>
-    <script>
-        async function fetchStockData() {
-            const ticker = document.getElementById('tickerInput').value;
 
-            if (!ticker) {
-                alert('Please enter a ticker symbol');
-                return;
+</body>
+
+<script>
+    async function getStockData() {
+
+        const stockSymbol = document.getElementById("searchBar").value;
+        //console.log("Ticker Symbol:", stockSymbol);
+
+        try {
+            const response = await fetch(`http://localhost:8085/api/stocks/${stockSymbol}`);
+            const data = await response.json();
+            console.log(data);
+
+            // Extract timestamps and prices
+            const timestamps = data?.chart?.result?.[0]?.timestamp;
+            const prices = data?.chart?.result?.[0]?.indicators?.quote?.[0]?.close;
+
+            // Check if data exists
+            if (timestamps && prices) {
+                // Convert timestamps to readable dates
+                const labels = timestamps.map(ts => new Date(ts * 1000).toLocaleString());
+               displayChart(labels, prices, stockSymbol);
+            } else {
+                console.error(`Data not found for ${stockSymbol}. Response structure:`, data);
+                document.getElementById("output").textContent = `Data not found for ${stockSymbol}.`;
             }
-
-            try {
-                const response = await fetch(`YOUR_BACKEND_API_ENDPOINT/${ticker}`); // Replace with your actual API endpoint
-                const data = await response.json();
-
-                // Here, you can parse the data and update the chart
-                updateChart(data);
-            } catch (error) {
-                console.error('Error fetching stock data:', error);
-                alert('Failed to fetch stock data. Please try again later.');
-            }
+        } catch (error) {
+            console.error('Error fetching stock data:', error);
+            document.getElementById("output").textContent = "Error fetching stock data. Please try again later.";
         }
+      }
 
-        function updateChart(data) {
-            const ctx = document.getElementById('stockChart').getContext('2d');
+function displayChart(labels, data, stockSymbol) {
+    const ctx = document.getElementById('stockChart').getContext('2d');
 
-            // Clear existing chart if it exists
-            if (window.stockChart) {
-                window.stockChart.destroy();
-            }
+    // Create a gradient for the area under the line
+    const gradient = ctx.createLinearGradient(0, 0, 0, 400); // Adjust the height as necessary
+    gradient.addColorStop(0, 'rgba(106, 13, 173, 0.6)'); // Start with purple (rgba)
+    gradient.addColorStop(1, 'rgba(255, 255, 255, 0.0)'); // Fade to transparent
 
-            // Create a new chart
-            window.stockChart = new Chart(ctx, {
-                type: 'line',
-                data: {
-                    labels: data.dates, // Assume your data has a "dates" array
-                    datasets: [{
-                        label: data.symbol, // Stock symbol
-                        data: data.prices, // Assume your data has a "prices" array
-                        borderColor: 'rgba(75, 192, 192, 1)',
-                        backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                        borderWidth: 2,
-                        fill: true
-                    }]
+    new Chart(ctx, {
+        type: 'line',
+        data: {
+            labels: labels,
+            datasets: [{
+                label: `Stock Price for ${stockSymbol}`,
+                data: data,
+                borderColor: '#001f3f', // Dark blue color for the line
+                backgroundColor: gradient, // Gradient background
+                fill: true, // Enable filling under the line
+                pointRadius: 0, // Remove dots
+                tension: 0.1 // Smooth the line
+            }]
+        },
+        options: {
+            responsive: true,
+            maintainAspectRatio: false, // Allow chart to fill the container
+            plugins: {
+                legend: {
+                    display: false // Hide the legend
                 },
-                options: {
-                    responsive: true,
-                    scales: {
-                        x: {
-                            title: {
-                                display: true,
-                                text: 'Date'
-                            }
-                        },
-                        y: {
-                            title: {
-                                display: true,
-                                text: 'Price ($)'
-                            },
-                            beginAtZero: true
+                tooltip: {
+                    enabled: true, // Enable tooltips
+                    mode: 'index', // Tooltip for closest point
+                    intersect: false // Show tooltip when hovering close to the line
+                }
+            },
+            scales: {
+                x: {
+                    title: { display: true, text: 'Timestamp' },
+                    ticks: {
+                        callback: function(value) {
+                            // Format the timestamp to display only hours
+                            return new Date(value).toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
                         }
+                    },
+                    grid: {
+                        display: false // Remove grid lines on x-axis
+                    }
+                },
+                y: {
+                    title: { display: true, text: 'Price (USD)' },
+                    grid: {
+                        display: false // Remove grid lines on y-axis
                     }
                 }
-            });
+            }
         }
-    </script>
-</body>
+    });
+}
+
+
+</script>
 </html>
