test has the working stuff

--- a/_posts/2024-10-26-test.md
+++ b/_posts/2024-10-26-test.md
@@ -275,22 +275,22 @@ title: Stocks Home
 </body>
 
 <script>
-    async function getStockData() {
+    let stockChart; // Declare stockChart globally
 
-        const stockSymbol = document.getElementById("searchBar").value;
-        //console.log("Ticker Symbol:", stockSymbol);
+async function getStockData() {
+    const stockSymbol = document.getElementById("searchBar").value;
+    document.getElementById("output").textContent = ""; // Clear previous messages
 
-        try {
-            const response = await fetch(`http://localhost:8085/api/stocks/${stockSymbol}`);
-            const data = await response.json();
-            console.log(data);
+    try {
+        const response = await fetch(`http://localhost:8085/api/stocks/${stockSymbol}`);
+        const data = await response.json();
 
-            // Extract timestamps and prices
-            const timestamps = data?.chart?.result?.[0]?.timestamp;
-            const prices = data?.chart?.result?.[0]?.indicators?.quote?.[0]?.close;
+        // Extract timestamps and prices
+        const timestamps = data?.chart?.result?.[0]?.timestamp;
+        const prices = data?.chart?.result?.[0]?.indicators?.quote?.[0]?.close;
 
-            // Check if data exists
-            if (timestamps && prices) {
+        // Check if data exists
+        if (timestamps && prices) {
                 // Convert timestamps to readable dates
                 const labels = timestamps.map(ts => new Date(ts * 1000).toLocaleString());
                displayChart(labels, prices, stockSymbol);
@@ -302,69 +302,47 @@ title: Stocks Home
             console.error('Error fetching stock data:', error);
             document.getElementById("output").textContent = "Error fetching stock data. Please try again later.";
         }
-      }
+}
 
-function displayChart(labels, data, stockSymbol) {
+function displayChart(labels, prices, tickerSymbol) {
     const ctx = document.getElementById('stockChart').getContext('2d');
 
-    // Create a gradient for the area under the line
-    const gradient = ctx.createLinearGradient(0, 0, 0, 400); // Adjust the height as necessary
-    gradient.addColorStop(0, 'rgba(106, 13, 173, 0.6)'); // Start with purple (rgba)
-    gradient.addColorStop(1, 'rgba(255, 255, 255, 0.0)'); // Fade to transparent
+    // Destroy the old chart if it exists
+    if (stockChart) {
+        stockChart.destroy();
+    }
 
-    new Chart(ctx, {
+    // Create a gradient fill
+    const gradient = ctx.createLinearGradient(0, 0, 0, 400);
+    gradient.addColorStop(0, 'rgba(75, 192, 192, 0.2)');
+    gradient.addColorStop(1, 'rgba(75, 192, 192, 0.1)');
+
+    // Create a new chart
+    stockChart = new Chart(ctx, {
         type: 'line',
         data: {
             labels: labels,
             datasets: [{
-                label: `Stock Price for ${stockSymbol}`,
-                data: data,
-                borderColor: '#001f3f', // Dark blue color for the line
-                backgroundColor: gradient, // Gradient background
-                fill: true, // Enable filling under the line
-                pointRadius: 0, // Remove dots
-                tension: 0.1 // Smooth the line
+                label: tickerSymbol.toUpperCase(),
+                data: prices,
+                borderColor: 'rgba(75, 192, 192, 1)',
+                borderWidth: 2,
+                fill: true,
+                backgroundColor: gradient,
+                spanGaps: true,
             }]
         },
         options: {
             responsive: true,
-            maintainAspectRatio: false, // Allow chart to fill the container
-            plugins: {
-                legend: {
-                    display: false // Hide the legend
-                },
-                tooltip: {
-                    enabled: true, // Enable tooltips
-                    mode: 'index', // Tooltip for closest point
-                    intersect: false // Show tooltip when hovering close to the line
+            maintainAspectRatio: false,
+            scales: {
+                y: {
+                    beginAtZero: true
                 }
             },
-            scales: {
-                x: {
-                    title: { display: true, text: 'Timestamp' },
-                    ticks: {
-                        callback: function(value) {
-                            // Format the timestamp to display only hours
-                            return new Date(value).toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
-                        }
-                    },
-                    grid: {
-                        display: false // Remove grid lines on x-axis
-                    }
-                },
-                y: {
-                    title: { display: true, text: 'Price (USD)' },
-                    grid: {
-                        display: false // Remove grid lines on y-axis
-                    }
-                }
-            }
         }
     });
 }
-
-
-    
 
 </script>
 </html>
